<resources>
    <string name="app_name">SW2</string>
    <string name="title_activity_maps">Map</string>
    <dimen name="asd">10dp</dimen>
    <string name="title_activity_menu_principal">menu_principal</string>
    <string name="title_home">Home</string>
    <string name="title_afiliacion">Afiliacion</string>
    <string name="title_busqueada">Busqueada</string>
    <string name="title_Contratos">Contratos</string>
    <string name="title_activity_navagation_main_bottom_bar">navagation_main_bottom_bar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tittle_Kamachi">Kamachi</string>
    <string name="tittle_register">Registrate para que puedas formar parte de nosotros o encontrar el servicio que deseas</string>
    <string name="descripcion_del_trabajo">
        El cliente se registra ingresando datos necesarios ; posteriormente, una vez logueado, en la
interfaz principal mostrará una lista de servicios disponibles. El usuario decide si desea ser
un proveedor ; es decir , realizar una publicación en la cual pone en conocimiento los
servicios que puede ofrecer previa configuración del perfil, o puede ser un cliente que
simplemente está buscando un servicio que necesita. En este caso, puede utilizar la opción
de buscar por nombre de servicio; una vez escogido el servicio deseado, se desplegará una
interfaz donde se mostrará una descripción sobre el servicio, datos personales , en el caso
de que sea una persona natural, y datos de una empresa, en el caso de que sea una
persona jurídica; además de que cuenta con una calificación y comentarios. Si el usuario
desea contratar el servicio,se enviará el monto de acuerdo a lo establecido en la publicación
(mitad o total de pago) en el método que se coordinó(tarjeta, efectivo, entre otros); por parte
de proveedor, tiene que firmar un contrato donde se acuerde la realización del servicio la

cantidad de tiempo solicitado; de esta manera , se pone evidencia que ambas partes
cumplar con lo establecido . Una vez que el servicio fue completado, el usuario tendrá que
indicar , a través de la aplicación , que el servicio fue terminado con éxito y evaluandolo.
    </string>
    <string name="tag_name">Nombre</string>
    <string name="tag_lastname">Apellido</string>
    <string name="tag_email">Correo Electronico</string>
    <string name="tag_phone">Telefono</string>
    <string name="tag_deal_service">Servicios Contratados</string>
    <string name="Tag_Historial_de_servicios">Historial de servicios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="list_servicios_categoria">
        <item>Selecione la categoria</item>
        <item>Asistencia técnica</item>
        <item>Bienes y servicios</item>
        <item>Comercio‎ </item>
        <item>Diseño de servicios</item>
        <item>Entretenimiento‎ </item>
        <item>Federación de Asociaciones de Comercio Internacional</item>
        <item>Gestión por servicios</item>
        <item>Hospedajes‎ </item>
        <item>Industrias de servicios‎</item>
        <item>Mercadotecnia‎ </item>
        <item>Prestador de servicios de traducción</item>
        <item>Proveedor de servicios</item>
        <item>Sector salud</item>
        <item>Sector servicios</item>
        <item>Servicio de telecomunicación</item>
        <item>Servicios en línea‎</item>
        <item>Servicios financieros‎ </item>
        <item>Servicios públicos‎ </item>
        <item>Transmisión de video</item>
    </string-array>
    <string-array name="list_distritos_lima">
        <item> Escoge el distrito del servicio</item>
        <item> Ate</item>
        <item> Barranco</item>
        <item> Breña</item>
        <item> Cercado de Lima</item>
        <item> Chorrillos</item>
        <item> Comas</item>
        <item> El Agustino</item>
        <item> Independencia</item>
        <item> Jesús María</item>
        <item> La Molina</item>
        <item> La Victoria</item>
        <item> Lince</item>
        <item> Los Olivos</item>
        <item> Magdalena del Mar</item>
        <item> Miraflores</item>
        <item> Pueblo Libre</item>
        <item> Puente Piedra</item>
        <item> Rimac</item>
        <item> San Borja</item>
        <item> San Isidro</item>
        <item> San Juan de Lurigancho</item>
        <item> San Juan de Miraflores</item>
        <item> San Luis</item>
        <item> San Martin de Porres</item>
        <item> San Miguel</item>
        <item> Santa Anita</item>
        <item> Santa Rosa</item>
        <item> Santiago de Surco</item>
        <item> Surquillo</item>
        <item> Villa El Savador</item>
        <item> Villa María del Triunfo</item>
    </string-array>
    <string name="text_editprofile_description">
        Se modificaran unicamente los campos marcados
    </string>
    <string name="title_activity_register_afiliado">RegisterAfiliado</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

</resources>
