<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Secundarios.EditarPefil">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:paddingStart="5dp"
                android:paddingTop="8dp"
                android:paddingEnd="5dp"
                android:paddingBottom="8dp"
                android:text="@string/text_editprofile_description"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/colores"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="191dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView_profile_edit"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="36dp"
                        android:layout_marginBottom="10dp"
                        android:background="#FFFFFF" />

                    <Button
                        android:id="@+id/button_EditarFotoPerfil_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginBottom="10dp"
                        android:text="Editar Foto" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="60dp"
                        android:background="@drawable/backwithborder"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="96dp"
                            android:layout_height="38dp"
                            android:layout_margin="6dp"
                            android:text="@string/tag_deal_service"
                            android:textColor="@color/Negro" />

                        <TextView
                            android:id="@+id/textViewNumberServices_Profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:layout_marginRight="10dp"
                            android:text="0"
                            android:textColor="@color/Negro"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2_edit"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tag_name"
                    android:textAlignment="center" />

                <CheckBox
                    android:id="@+id/checkBox_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="0" />

                <EditText
                    android:id="@+id/textView_name_profile_edit"
                    android:layout_width="210dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tag_lastname"
                    android:textAlignment="center" />

                <CheckBox
                    android:id="@+id/checkBox_lastname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="0" />

                <EditText
                    android:id="@+id/textViewLastName_profile_edit"
                    android:layout_width="210dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:enabled="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tag_email"
                    android:textAlignment="center" />

                <CheckBox
                    android:id="@+id/checkBox_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="0" />

                <EditText
                    android:id="@+id/textViewEmail_Profile_edit"
                    android:layout_width="210dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:enabled="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tag_phone"
                    android:textAlignment="center" />

                <CheckBox
                    android:id="@+id/checkBox_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="0" />

                <EditText
                    android:id="@+id/textViewphone_profile_edit"
                    android:layout_width="210dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:enabled="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="344dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="EditFireBaseUserData"
                    android:text="Editar Datos" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>