<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:background="@drawable/colores"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_profile"
                    android:layout_width="120dp"
                    android:layout_height="129dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/backwithborder" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    </TextView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/backwithborder"
                        android:layout_marginLeft="55dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="96dp"
                            android:layout_height="38dp"
                            android:layout_margin="6dp"
                            android:text="@string/tag_deal_service"
                            android:textColor="@color/Negro" />

                        <TextView
                            android:id="@+id/textViewNumberServices_Profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:layout_marginRight="10dp"
                            android:text="0"
                            android:textSize="16sp"
                            android:textColor="@color/Negro" />
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFCDD2"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_nombre_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tag_name"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/textView_name_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:background="@drawable/backwithborder"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFCDD2"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_lastname_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tag_lastname"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewLastName_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFCDD2"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_email_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tag_email"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/textViewEmail_Profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFCDD2"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_phone_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tag_phone"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/textViewphone_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>